tests/testcases/invalid/semantic/22_if_condition_not_bool.ciel
// Error: if condition must be of type 'bool'
struct S { int x; };
int main() {
    struct S s;
    if (s) {  // Error: s is struct, not bool, integral or float
        return 1;
    }
    return 0;
}
